--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-tag-input-component": "2.0.2",
+    "react-date-picker": "11.0.0",
     "rxjs": "7.8.1"
   },
   "devDependencies": {
