--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,8 @@
     "react-dom": "19.0.0",
     "react-tag-input-component": "2.0.2",
     "rxjs": "7.8.1",
-    "@fontsource/rubik": "5.1.1"
+    "@fontsource/rubik": "5.1.1",
+    "jwt-decode": "4.0.0"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "7.21.11",
