--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ strip = true
 [dependencies]
 serde = { version = "1.0", features = ["derive", "rc"] }
 serde_yaml = "0.9"
-serde_json = "1"
+serde_json = { version = "1", features = ["arbitrary_precision"] }
 quick-xml = { version = "0.37", features = ["serialize"] }
 regex = "1.11"
 clap = { version = "4", features = ["derive"] }
