--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,9 @@
     "react-tag-input-component": "2.0.2",
     "rxjs": "7.8.1",
     "@fontsource/rubik": "5.1.1",
-    "jwt-decode": "4.0.0"
+    "jwt-decode": "4.0.0",
+    "i18next": "24.2.2",
+    "react-i18next": "15.4.1"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "7.21.11",
