--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "author": "euzu",
   "version": "2.2.1",
   "private": true,
-  "homepage": "./",
+  "homepage": "",
   "license": "MIT",
   "scripts": {
     "react-start": "react-scripts start",
