--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,7 @@
     "file-saver": "2.0.5",
     "notistack": "3.0.2",
     "react": "19.0.0",
-    "react-date-picker": "11.0.0",
+    "react-datepicker": "8.1.0",
     "react-dom": "19.0.0",
     "react-tag-input-component": "2.0.2",
     "rxjs": "7.8.1",
