--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,7 +42,7 @@ mime = "0.3"
 log = "0.4"
 env_logger = "0.11"
 rustelebot = "0.3"
-bincode = "1.3"
+bincode = { version = "2.0.0-rc.3",  features = ["std", "serde"] }
 rand = "0.9"
 rpassword = "7.3"
 flate2 = "1"
