--- a/docker/Dockerfile-manual
+++ b/docker/Dockerfile-manual
@@ -9,8 +9,7 @@ COPY --from=build /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
 
 COPY ./m3u-filter /
 COPY ./web /web
-COPY ./channel_unavailable.ts ./channel_unavailable.ts
-COPY ./user_connections_exhausted.ts ./user_connections_exhausted.ts
+COPY ./resources ./resources
 
 CMD ["./m3u-filter", "-s", "-p", "/config"]
 
@@ -23,7 +22,7 @@ WORKDIR /app
 
 COPY ./m3u-filter .
 COPY ./web ./web
-COPY ./freeze_frame.ts ./freeze_frame.ts
+COPY ./resources ./resources
 # config should be mounted as volume
 # COPY ./config ./config
 
