--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,6 @@
     "analyze": "source-map-explorer 'build/static/js/*.js'"
   },
   "dependencies": {
-    "@fontsource/rubik": "5.1.1",
     "file-saver": "2.0.5",
     "i18next": "24.2.2",
     "jwt-decode": "4.0.0",
@@ -76,5 +75,6 @@
       "react-app",
       "react-app/jest"
     ]
-  }
+  },
+  "proxy": "http://localhost:8901"
 }
