--- a/frontend/public/config.json
+++ b/frontend/public/config.json
@@ -2,6 +2,7 @@
   "app_title": "m3u-filter",
   "app_logo": null,
   "api": {
-    "serverUrl": "/api/v1/"
+    "apiUrl": "/api/v1/",
+    "authUrl": "/auth/"
   }
 }
