--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ strip = true
 serde = { version = "1.0", features = ["derive", "rc"] }
 serde_yaml = "0.9"
 serde_json = { version = "1", features = ["arbitrary_precision"] }
-quick-xml = { version = "0.37", features = ["serialize"] }
+quick-xml = "0.37"
 regex = "1.11"
 clap = { version = "4", features = ["derive"] }
 url = "2.5"
@@ -54,6 +54,8 @@ paste = "1.0"
 tempfile = "3.19"
 ruzstd = "0"
 filetime = "0.2"
+unicode-normalization = "0.1"
+deunicode = "1.6"
 #[cfg(target_os = "macos")]
 libc = "0"
 #[cfg(target_os = "windows")]
