--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,6 +54,7 @@ paste = "1.0"
 tempfile = "3.19"
 ruzstd = "0"
 filetime = "0.2"
+zeroize = "1.8.1"
 #[cfg(target_os = "macos")]
 libc = "0"
 #[cfg(target_os = "windows")]
