--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,7 +54,8 @@ paste = "1.0"
 tempfile = "3.19"
 ruzstd = "0"
 filetime = "0.2"
-zeroize = "1.8.1"
+zeroize = "1.8"
+strsim = "0.11"
 #[cfg(target_os = "macos")]
 libc = "0"
 #[cfg(target_os = "windows")]
