--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,6 +56,7 @@ ruzstd = "0"
 filetime = "0.2"
 zeroize = "1.8"
 strsim = "0.11"
+rphonetic = "3"
 #[cfg(target_os = "macos")]
 libc = "0"
 #[cfg(target_os = "windows")]
