--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,7 +50,6 @@ bytes = "1.10"
 tokio-stream = { version = "0.1", features = ["sync"] }
 tokio = { version = "1.44", features = ["rt-multi-thread", "parking_lot", "fs"] }
 tokio-util = "0.7"
-paste = "1.0"
 tempfile = "3.19"
 ruzstd = "0"
 filetime = "0.2"
@@ -58,6 +57,8 @@ zeroize = "1.8"
 strsim = "0.11"
 rphonetic = "3"
 rayon = "1.10"
+base64 = "0"
+paste = "1"
 #[cfg(target_os = "macos")]
 libc = "0"
 #[cfg(target_os = "windows")]
