added force_redirect flag to config target options

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -59,6 +59,7 @@ rphonetic = "3"
 rayon = "1.10"
 base64 = "0"
 paste = "1"
+bitflags = "2"
 #[cfg(target_os = "macos")]
 libc = "0"
 #[cfg(target_os = "windows")]
