--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,32 +19,32 @@
   },
   "dependencies": {
     "file-saver": "2.0.5",
-    "i18next": "24.2.3",
-    "react-i18next": "15.4.1",
+    "i18next": "25.0.1",
     "jwt-decode": "4.0.0",
+    "mpegts.js": "1.8.0",
     "notistack": "3.0.2",
     "react": "19.1.0",
-    "react-datepicker": "8.2.1",
+    "react-datepicker": "8.3.0",
     "react-dom": "19.1.0",
+    "react-i18next": "15.4.1",
     "react-tag-input-component": "2.0.2",
     "rxjs": "7.8.2",
     "video.js": "8.22.0",
-    "videojs-mpegtsjs": "1.0.0",
-    "mpegts.js": "1.8.0"
+    "videojs-mpegtsjs": "1.0.0"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "7.21.11",
-    "@babel/runtime": "7.26.9",
+    "@babel/runtime": "7.27.0",
     "@types/file-saver": "2.0.7",
-    "@types/react": "19.0.10",
-    "@types/react-dom": "19.0.4",
+    "@types/react": "19.1.2",
+    "@types/react-dom": "19.1.2",
     "@types/video.js": "7.3.58",
-    "@typescript-eslint/eslint-plugin": "8.24.1",
-    "@typescript-eslint/parser": "8.24.1",
+    "@typescript-eslint/eslint-plugin": "8.30.1",
+    "@typescript-eslint/parser": "8.30.1",
     "babel-eslint": "10.1.0",
     "concurrently": "9.1.2",
     "cross-env": "7.0.3",
-    "eslint": "9.20.1",
+    "eslint": "9.25.0",
     "eslint-config-prettier": "10.0.1",
     "eslint-config-react-app": "7.0.1",
     "eslint-plugin-flowtype": "8.0.3",
@@ -53,13 +53,13 @@
     "eslint-plugin-jsx-a11y": "6.10.2",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-react": "7.37.4",
-    "eslint-plugin-react-hooks": "5.1.0",
-    "prettier": "3.5.1",
+    "eslint-plugin-react-hooks": "5.2.0",
+    "prettier": "3.5.3",
     "react-scripts": "5.0.1",
-    "sass": "1.85.0",
+    "sass": "1.86.3",
     "source-map-explorer": "2.5.3",
-    "typescript": "5.7.3",
-    "wait-on": "8.0.2"
+    "typescript": "5.8.3",
+    "wait-on": "8.0.3"
   },
   "browserslist": {
     "production": [
