--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   m3u-filter:
     container_name: m3u-filter
     image: ghcr.io/euzu/m3u-filter:latest
-    working_dir: /
+    working_dir: /app
     volumes:
       - ./data:/app/data
       - ./config:/app/config
