--- a/Cargo.toml
+++ b/Cargo.toml
@@ -60,6 +60,7 @@ rayon = "1.10"
 base64 = "0"
 paste = "1"
 bitflags = "2"
+indexmap = "2"
 #[cfg(target_os = "macos")]
 libc = "0"
 #[cfg(target_os = "windows")]
