--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "m3u-filter",
-  "description": "m3u-filter",
+  "name": "tuliprox",
+  "description": "tuliprox",
   "author": "euzu",
   "version": "2.2.5",
   "private": true,
