--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "m3u-filter",
-  "name": "m3u-filter",
+  "short_name": "tuliprox",
+  "name": "tuliprox",
   "icons": [
     {
       "src": "assets/favicon.ico",
